# vatic_udp

./: PlotvaticTrace.py  README.md  channelsCap.py  plot.py  runmm2.py  runmmVatic.py  script_runmm2.py
results/: LOW_10-HIGH_100_uplink_res-1000_tput.csv  LOW_10-HIGH_100_uplink_res-100_tput.csv  LOW_10-HIGH_100_uplink_res-10_tput.csv  LOW_10-HIGH_100_uplink_res-500_delays.csv  LOW_10-HIGH_100_uplink_res-500_tput.csv
results_bbr/: LOW_10-HIGH_100_T30_1000KiB_delay05_receiver_tput.csv  LOW_10-HIGH_100_T30_1000KiB_delay05_sender_RTT.csv  LOW_10-HIGH_100_T30_1000KiB_delay05_uplink_mmtput.csv
traces/channels/: Building_a_new  Building_b_new  Building_c_new  Const-B_1Gbps-RTT_20ms  InHM_a_new  InHM_b_new  InHM_c_new  LOW_10-HIGH_100  RMa_a_new  RMa_b_new  RMa_c_new  RMa_d_new  RMa_e_new  RMa_f_new  p2pVarying
vatic/: configure.ac
vatic/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
vatic/nbproject/private/: private.xml
vatic/src/: Client.cpp  Client.h  ConfUtils.cpp  ConfUtils.h  Log.h  Makefile.am  PacketUtils.h  TrafficSource.cpp  TrafficSource.h  Utils.h  Vatic.cpp  Vatic.h  client_program.cpp  sandbox.cpp  server_program.cpp
vatic/src/.deps/: Client.Po  ConfUtils.Po  Log.Po  TrafficSource.Po  Vatic.Po  client_program.Po  server_program.Po
